[Feature]: 支持复杂 Skill 在沙箱中执行 Python 脚本
Co-authored-by: yaodonghai<ydh110100@163.com>



# message auto-generated for no-merge-commit merge:
!112 merge feature-630-sandbox2 into feature/630

[Feature]: 支持复杂 Skill 在沙箱中执行 Python 脚本

Created-by: whylazy
Commit-by: yaodonghai
Merged-by: fujilie
Description: <!--  Thanks for sending a pull request!  Here are some tips for you:

1) If this is your first time, please read our contributor guidelines: https://gitcode.com/openJiuwen/community/blob/master/CONTRIBUTING.md

2) If you want to contribute your code but don't know who will review and merge, please add label `openjiuwen-assistant` to the pull request, we will find and do it as soon as possible.
-->

**What type of PR is this?**
<!-- 
选择下面一种标签替换下方 `/kind <label>`，可选标签类型有：
- /kind bug 
- /kind task
- /kind feature
- /kind refactor
- /kind clean_code
如PR描述不符合规范，修改PR描述后需要/check-pr重新检查PR规范。
-->
/kind <label>


**Self-checklist**:（**请自检，在[ ]内打上x，我们将检视你的完成情况，否则会导致pr无法合入**）

+ - [ ] **设计**：PR对应的方案是否已经经过Maintainer评审，方案检视意见是否均已答复并完成方案修改
+ - [ ] **测试**：PR中的代码是否已有UT/ST测试用例进行充分的覆盖，新增测试用例是否随本PR一并上库或已经上库
+ - [ ] **验证**：PR描述信息中是否已包含对该PR对应的Feature、Refactor、Bugfix的预期目标达成情况的详细验证结果描述
+ - [ ] **接口**：是否涉及对外接口变更，相应变更已得到接口评审组织的通过，API对应的注释信息已经刷新正确
+ - [ ] **文档**：是否涉及官网文档修改，如果涉及请及时提交资料到Doc仓

<!-- **Special notes for your reviewers**: -->
<!-- + - [ ] 是否导致无法前向兼容 -->
<!-- + - [ ] 是否涉及依赖的三方库变更 -->
  
**相关issue和设计文档见：**
  https://gitcode.com/openJiuwen/agent-core-java/issues/15
  
**功能自验：**
  ![image.png](https://raw.gitcode.com/user-images/assets/9191392/ee6a3623-1046-42b0-9ed3-2b4eddff2bcb/image.png 'image.png')
  
**修改前后冒烟用例无变化，如下截图：**
![image.png](https://raw.gitcode.com/user-images/assets/9191392/f7c3c969-e487-4714-9840-7313eaee9b44/image.png 'image.png')
![image.png](https://raw.gitcode.com/user-images/assets/9191392/ccd2e28e-580a-447c-b6e9-24a3eb322c0f/image.png 'image.png')

See merge request: openJiuwen/agent-core-java!112